# titan-public

./: .gitignore  Anchor.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_titan.sh
docs/: API.md  DEVELOPER_MOOD_SDK.md  comm-channels.md  getting-started.md  inference-providers.md  setup-modes.md  why-titan.md
programs/titan_zk_vault/: Cargo.toml
programs/titan_zk_vault/src/: lib.rs
scripts/: PERSONA_TEST_PRD.md  __init__.py  _phase11_11g_apply_dep_matrix.py  _phase11_11i_apply_error_envelope.py  _phase6_carve_guardian.py  _supervision_log_reader.py  _titan_bus_client_helpers.py  agno_baseline.py  analyze_haov_correlations.py  analyze_overnight.py  arc_competition.py  arc_cron_train.sh  arc_reasoning_baseline.py  arc_test_harness.py  arc_tool_augmented_test.py  arch_map.py  arch_map_dead_wiring.py  arch_map_dead_wiring_allowlist.txt  architecture_api_family_index.py  architecture_backup_restore_index.py  architecture_cgn_family_index.py  architecture_mainnet_birth_resurrection_index.py  architecture_synthesis_engine_index.py  architecture_trinity_index.py  arweave_backup.py  autonomous_language_pipeline.py  backfill_memory_nodes.py  backfill_synthesis_tx_index.py  backup_chain_backfill_v3.py  backup_critical_data.sh  backup_force_baseline.py  backup_restore_sovereign.py  backup_salvage_orphaned_event.py  batch_pyspy.sh  build_titan_rust.sh  cas_audit.py  chaos_meditation.py  check_phase11_compliance.py  child_development_test.py  cognitive_ab_test.py  (+169 more)
tests/: conftest.py  test_a8_3_output_verifier_subprocess.py  test_a8_4_outer_trinity_subprocess.py  test_a8_5_reflex_subprocess.py  test_a8_6_agency_concurrency.py  test_a8_6_agency_subprocess.py  test_agency_helpers.py  (+796 more)
titan-rust/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
titan-rust/.cargo/: config.toml
titan-rust/crates/titan-bus/: Cargo.toml
titan-rust/crates/titan-bus/src/: boot_buffer.rs  broker.rs  client.rs  drift_bridge.rs  heartbeat.rs  lib.rs  message.rs  ring.rs  server.rs  slow_consumer.rs  subscriber.rs
titan-rust/crates/titan-bus/tests/: bus_subscribe_envelope.rs  integration.rs  test_auto_pong_contract.rs
titan-rust/crates/titan-cgn/: Cargo.toml
titan-rust/crates/titan-cgn/src/: lib.rs
titan-rust/crates/titan-clocks/: Cargo.toml
titan-rust/crates/titan-clocks/src/: circadian.rs  lib.rs  pi_heartbeat.rs
titan-rust/crates/titan-core/: Cargo.toml
titan-rust/crates/titan-core/src/: atomic_write.rs  authkey.rs  bus_specs.rs  constants.rs  frame.rs  identity.rs  lib.rs  middle_path.rs  shm.rs  small_filter_down.rs  transition_buffer.rs  trinity_value_net.rs
titan-rust/crates/titan-core/src/supervisor/: backoff.rs  child.rs  dependency.rs  escalation.rs  event.rs  mod.rs  prctl_unix.rs  restart.rs  types.rs
titan-rust/crates/titan-core/tests/: parity_vectors.rs
titan-rust/crates/titan-fastbus/: Cargo.toml
titan-rust/crates/titan-fastbus/src/: handle.rs  lib.rs  payload.rs  ring.rs
titan-rust/crates/titan-inner-body-rs/: Cargo.toml
titan-rust/crates/titan-inner-body-rs/src/: main.rs  tick_loop.rs
titan-rust/crates/titan-inner-mind-rs/: Cargo.toml
titan-rust/crates/titan-inner-mind-rs/src/: main.rs  tick_loop.rs
titan-rust/crates/titan-inner-spirit-rs/: Cargo.toml
titan-rust/crates/titan-inner-spirit-rs/src/: main.rs  tick_loop.rs
titan-rust/crates/titan-kernel-rs/: Cargo.toml  build.rs
titan-rust/crates/titan-kernel-rs/src/: api_reload_subscriber.rs  broker_publisher.rs  cli.rs  config_daemon.rs  config_schema.rs  exit.rs  fastbus_publisher.rs  identity_load.rs  kernel.rs  kernel_supervisor.rs  logging.rs  main.rs  orphan_reaper.rs  persistence.rs  spawn.rs  substrate_watch.rs  supervision_log.rs  version.rs
titan-rust/crates/titan-kernel-rs/tests/: test_kernel_boot.rs
titan-rust/crates/titan-outer-body-rs/: Cargo.toml
titan-rust/crates/titan-outer-body-rs/src/: main.rs  tick_loop.rs
titan-rust/crates/titan-outer-mind-rs/: Cargo.toml
titan-rust/crates/titan-outer-mind-rs/examples/: outer_mind_parity_dump.rs
titan-rust/crates/titan-outer-mind-rs/src/: lib.rs  main.rs  tick_loop.rs
titan-rust/crates/titan-outer-spirit-rs/: Cargo.toml
titan-rust/crates/titan-outer-spirit-rs/examples/: outer_spirit_parity_dump.rs
titan-rust/crates/titan-outer-spirit-rs/src/: lib.rs  main.rs  tick_loop.rs
titan-rust/crates/titan-schumann/: Cargo.toml
titan-rust/crates/titan-schumann/src/: generator.rs  lib.rs
titan-rust/crates/titan-state/: Cargo.toml
titan-rust/crates/titan-state/src/: lib.rs  registry.rs  slot.rs  spec.rs
titan-rust/crates/titan-trinity-daemon/: Cargo.toml
titan-rust/crates/titan-trinity-daemon/src/: adoption.rs  checkpoint.rs  chi_read.rs  content_hash.rs  corrective_events.rs  drift_warn.rs  error.rs  filter_apply.rs  firing_payload.rs  focus_input.rs  gift_events.rs  ground_up.rs  homeostasis.rs  jittered_tick.rs  journey.rs  lib.rs  neuromod_read.rs  observer_mask.rs  polarity_homeostat.rs  publish_throttle.rs  pulse_watch.rs  restoring_cfg.rs  sensor_cache_read.rs  slot_io.rs  subscriptions.rs  up_leg_masks.rs
titan-rust/crates/titan-trinity-daemon/tests/: inner_trinity_e2e.rs  trinity_conformance.rs
titan-rust/crates/titan-trinity-rs/: Cargo.toml  build.rs
titan-rust/crates/titan-trinity-rs/examples/: chi_parity_dump.rs
titan-rust/crates/titan-trinity-rs/src/: anchor.rs  body_cycle.rs  boot.rs  chi_state.rs  cli.rs  exit.rs  fastbus_consumer.rs  filter_down.rs  ground_up.rs  lib.rs  main.rs  main_bus_publisher.rs  sphere_clocks.rs  supervise.rs  tick_loop.rs  topology.rs  version.rs
titan-rust/crates/titan-trinity-rs/tests/: parity_ground_up.rs
titan-rust/crates/titan-unified-spirit-rs/: Cargo.toml  build.rs
titan-rust/crates/titan-unified-spirit-rs/src/: boot.rs  child_specs.rs  cli.rs  exit.rs  filter_down.rs  lib.rs  logging.rs  main.rs  metadata_publisher.rs  middle_path.rs  orchestration.rs  resonance.rs  runtime.rs  self_assembly.rs  slot_handles.rs  supervise.rs  unified_spirit.rs  version.rs
titan-rust/crates/titan-unified-spirit-rs/tests/: test_boot_e2e.rs
titan-rust/systemd/: titan@.service
(+1423 files in other folders)
