[project]
name = "titan-hcl"
version = "2.0.0a1"
description = "Titan Memory Architecture: Sovereign AI with Graph Memory, On-Chain Identity, and Offline RL for OpenClaw Agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Labs"},
]
readme = "README.md"

# ── Core Dependencies ──────────────────────────────────────────────────────────
# These are the minimum required packages for a functional Titan.
# OpenClaw SDK is a PEER dependency — the host framework provides it.
# Solana SDKs (solders, solana) degrade gracefully when absent.
dependencies = [
    # Memory & Intelligence
    "duckdb>=1.0.0",                    # Unified metadata store (replaces SQLite memory_nodes.db)
    "faiss-cpu>=1.7.0",                 # FAISS vector index for semantic search
    "kuzu>=0.4.0",                      # Knowledge graph (Trinity-typed entities)
    "llama-cpp-python>=0.3.0",          # Embedding runtime — bge-small-en-v1.5 GGUF (leak-free CPU, torch-free).
                                        # Replaces fastembed/onnxruntime per RFP_embedding_runtime_llamacpp_migration.md.
                                        # NOTE: installer adds --extra-index-url .../whl/cpu for the prebuilt CPU wheel.
    "fastembed>=0.3.0",                 # Lightweight embeddings (bge-small-en-v1.5) — ⚠ DEPRECATED, removed at RFP P5
    "sentence-transformers>=4.0.0",     # ⚠ BROKEN (torch/torchvision ABI) — slated for removal; see RFP §1
    "torch>=2.0.0",                     # RL backbone (IQL Actor/Critic/Value networks). NOTE:
                                        # the installer adds --extra-index-url .../whl/cpu so this
                                        # resolves to the light CPU wheel (no 5GB CUDA) on servers.
    "tensordict>=0.4.0",               # TorchRL data structures
    "torchrl>=0.4.0",                  # Offline RL (ReplayBuffer, IQLLoss)
    "numpy>=1.26.0",                   # Pervasive (tensors, trinity vectors) — directly imported ~90×
    "scipy>=1.11.0",                   # Cognition math (also transitive via sentence-transformers)
    "scikit-learn>=1.3.0",            # Clustering / meta-cognition analytics

    # Cognitive / Agent runtime
    "agno[openai,sqlite]==2.6.9",     # Agent framework (chat). [openai]→OpenRouter/OpenAILike models;
                                        # [sqlite]→sqlalchemy for AsyncSqliteDb chat sessions.
                                        # PINNED EXACT (was >=2.5.0, which floated → fresh installs
                                        # pulled untested versions). 2.6.9 smoke-verified compatible
                                        # with our surface (6 imports + Agent kwargs + guardrail +
                                        # stream/stream_events). See AUDIT_agno_keep_vs_lean_20260529.md.
                                        # Bump deliberately + smoke-test; never float.
    "aiosqlite>=0.20.0",              # async SQLite driver for agno's AsyncSqliteDb (NOT pulled by agno[sqlite])
    "pydantic>=2.5.0",                # Schemas (also a base dep of agno + fastapi; declared explicitly)

    # Blockchain (graceful degradation if absent)
    "solders>=0.21.0",                 # Solana primitives (Pubkey, Keypair, Instruction)
    "solana>=0.34.0",                  # Solana RPC client (AsyncClient)
    "cryptography>=42.0.0",           # AES-256-GCM encryption, PBKDF2 key derivation
    "PyJWT>=2.8.0",                   # JWT auth (internal_key / Privy session validation)

    # API & Networking
    "fastapi>=0.110.0",               # Sovereign Observatory API
    "uvicorn>=0.27.0",                # ASGI server
    "httpx>=0.27.0",                  # Async HTTP (OpenRouter, TwitterAPI.io, SearXNG, Ollama, Shadow Drive)
    "aiohttp>=3.9.0",                 # Async HTTP client (sage / social / streaming paths)
    "requests>=2.31.0",              # Sync HTTP (RPC helpers, simple fetches)
    "websockets>=12.0",               # Real-time event stream (Observatory WebSocket)

    # Comms — Telegram is the guaranteed channel (RFP locked decision)
    "python-telegram-bot>=21.0",      # Telegram bot (the always-on comm channel)

    # Process / runtime infrastructure
    "psutil>=5.9.0",                  # Resource sensing (Guardian, health, metabolism)
    "setproctitle>=1.3.0",           # Per-worker process titles (fleet observability)
    "msgpack>=1.0.0",                # Bus frame serialization (Phase C state transport)
    "zstandard>=0.22.0",             # Compression (timechain / backup substrate)

    # Expressive Engine
    "pillow>=10.2.0",                 # Procedural art (flow fields, L-systems, NFT composites)
    "pydub>=0.25.1",                  # Audio format conversion (WAV generation uses stdlib wave)

    # Config
    "tomli-w>=1.2.0",                 # TOML writer for ~/.titan/secrets.toml updates (session refresh)
    "toml>=0.10.2",                  # TOML read/write helper (used across scripts + a few runtime paths)
    "PyYAML>=6.0",                    # YAML config / RPC-exemption manifests
]

# ── Optional Dependency Tiers ──────────────────────────────────────────────────
[project.optional-dependencies]

# Research stack: Stealth-Sage multi-modal research pipeline (~500MB)
# Install: pip install openclaw-plugin-titan[research]
research = [
    "crawl4ai>=0.4.0",                # Playwright-based stealth web scraper
    "playwright>=1.42.0",             # Browser automation (needs: playwright install chromium)
    "unstructured[pdf,docx,pptx,xlsx]>=0.14.0",  # Document intelligence
    "ollama>=0.1.7",                  # Local LLM inference (distillation, haiku, scoring)
    "html2text>=2024.2.26",           # HTML→markdown for scraped research pages (sage)
]

# ARC-AGI capability: the abstraction-and-reasoning challenge solver (opt-in).
# Install: pip install openclaw-plugin-titan[arc]
arc = [
    "arcengine>=0.9.0",              # ARC-AGI-3 game engine client
    "arc-agi>=0.9.0",               # ARC-AGI task primitives
]

# Sovereign stack: ZK-Vault and Anchor program interaction
# Install: pip install openclaw-plugin-titan[sovereign]
sovereign = [
    "anchorpy>=0.20.1",              # Anchor IDL interaction for titan_zk_vault
]

# Development: test document generation + QR codes for genesis ceremony
# Install: pip install openclaw-plugin-titan[dev]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "reportlab>=4.0.0",              # PDF generation (test fixtures)
    "python-docx>=1.1.0",           # DOCX generation (test fixtures)
    "python-pptx>=0.6.23",          # PPTX generation (test fixtures)
    "openpyxl>=3.1.2",              # XLSX generation (test fixtures)
    "qrcode>=7.4",                   # QR code for Shard 1 display in genesis ceremony
    "libcst>=1.1.0",                # AST analysis for arch_map deep wiring scans
    "matplotlib>=3.8.0",            # Plots for arch_map / telemetry analysis scripts
]

# Everything: full sovereign deployment
# Install: pip install openclaw-plugin-titan[full]
full = [
    "openclaw-plugin-titan[research,sovereign,arc,dev]",
]

# ── Entry Points ───────────────────────────────────────────────────────────────
[project.scripts]
titan-hcl = "scripts.titan_hcl:main"

# ── Build System ───────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["titan_hcl*", "scripts*"]

# ── Pytest Configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
