[workspace]
resolver = "2"
members = [
    "crates/titan-core",
    "crates/titan-bus",
    "crates/titan-state",
    "crates/titan-cgn",
    "crates/titan-clocks",
    "crates/titan-fastbus",
    "crates/titan-kernel-rs",
    "crates/titan-schumann",
    "crates/titan-trinity-rs",
    "crates/titan-unified-spirit-rs",
    "crates/titan-trinity-daemon",
    "crates/titan-inner-body-rs",
    "crates/titan-inner-mind-rs",
    "crates/titan-inner-spirit-rs",
    "crates/titan-outer-body-rs",
    "crates/titan-outer-mind-rs",
    "crates/titan-outer-spirit-rs",
]

# Phase C C-S3 chunks shipped: titan-fastbus, titan-schumann, titan-trinity-rs.
# Phase C C-S4 chunks shipping: titan-unified-spirit-rs (replaces the
# C-S3.5 `titan-unified-spirit-rs-placeholder` — placeholder removed
# this chunk per master plan §10.4 "rename from -placeholder").
# Subsequent C-S* sessions:
#   C-S5: titan-trinity-daemon (shared lib), titan-inner-{body,mind,spirit}-rs
#   C-S6: titan-outer-{body,mind,spirit}-rs

[workspace.package]
version = "0.1.0"
edition = "2021"
# MSRV bumped 1.75 → 1.87 on 2026-05-12 to align declared compat window with
# the codebase's actual usage: `f32::abs` const-fn (stabilized 1.85),
# `f32::round_ties_even` (1.77), and `u64::is_multiple_of` (1.87). Production
# deploys via stable (currently 1.95); CI uses dtolnay/rust-toolchain@stable.
# 1.75 was aspirational; we have not in fact supported it for some time.
rust-version = "1.87"
authors = ["Titan Architect <hello@example.com>"]
license = "Proprietary"

# Workspace-level clippy lint allowances (2026-04-30).
# Default policy: -D warnings (treat all clippy warnings as errors) per
# .github/workflows/phase_c.yml rust-gates job + scripts/precommit_all_checks.sh
# step 6. The 3 lints below are explicitly relaxed because they're
# stylistic preferences that conflict with our SPEC parity discipline:
#
#   needless_range_loop — `for i in 0..N { slice[i] = ... }` is the
#       canonical pattern for byte-identical 1:1 ports of Python loops
#       (see crates/titan-trinity-daemon — every loop has a SPEC-doc'd
#       Python parity reference at e.g. ground_up.py:78-83). Refactoring
#       to iter().enumerate()/zip() risks subtle off-by-one drift in
#       parity tests. Test-code loops with `assert!(slice[i] - x < eps)`
#       diagnostics MUST keep `i` for failure messages.
#
#   unnecessary_cast — defensive `as f64` casts on values that may or may
#       not be f64 depending on SPEC TOML constant generation. The cost
#       of a same-type cast is zero; the cost of a generation-time type
#       mismatch is a CI break. Defensive casts are intentional.
#
#   doc_lazy_continuation — multi-line doc list items spanning multiple
#       lines (e.g. `//!   - outer-body : 10s base ± 20% jitter (per\n
#       //!                              OUTER_BODY_TICK_BASE_S)`) are
#       readable as written; clippy's preferred reflow harms readability.
#
# Stricter lints (correctness, perf, suspicious, complexity) remain
# `-D warnings`. To re-enable any of the 3 below for a specific crate,
# add `lints.clippy.<name> = "warn"` in that crate's Cargo.toml.
[workspace.lints.clippy]
needless_range_loop = "allow"
unnecessary_cast = "allow"
doc_lazy_continuation = "allow"

[workspace.dependencies]
# Async runtime (used by binaries; titan-core stays sync-friendly)
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "signal", "sync", "fs", "io-util", "macros", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization (msgpack — same wire format as B.2 per SPEC §8)
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"

# Random for HMAC challenge nonces
rand = "0.8"

# Crypto (RustCrypto — pure Rust, no system deps; SPEC §6.3 + §11.6 RFC 4231/5869 parity)
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
ed25519-dalek = "2"
zeroize = { version = "1", features = ["derive"] }

# Memory + concurrency
memmap2 = "0.9"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1"

# Unix syscalls (SPEC §11.C prctl + §15 signal handling)
nix = { version = "0.27", features = ["signal", "process", "fs", "mman", "sched"] }
libc = "0.2"

# Socket construction (SPEC §11.B.5 kernel api socket activation — bind the
# listening socket with SO_REUSEADDR, hand its fd to api children).
socket2 = "0.6"

# TOML parse (SPEC §11.B.5 — the kernel reads `[api].port`/`[api].host` from
# config.toml so socket activation binds each Titan's CONFIGURED port, not a
# hardcoded default; required for multi-Titan-per-box hosts, e.g. T2:7777/T3:7778).
toml = "0.8"

# Static maps (SPEC §8 catalog as compile-time perfect hash)
phf = { version = "0.11", features = ["macros"] }

# Logging + tracing (SPEC §16 structured-JSON)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI parsing (SPEC §13 per-binary contract)
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Build-time SHA injection
vergen = { version = "8", features = ["git", "gitcl"] }

# Misc
bytes = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

# Content-hash gating (SPEC §7.1 — daemon writes only on payload change)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Dev/debug profile — lean by default so target/debug doesn't balloon. Cargo's
# default (debug = 2) emits FULL DWARF on every dependency rlib, which is what
# grew target/debug to 17G. Dependencies need no debug symbols; first-party
# crates keep line tables so backtraces still resolve. Typically cuts
# target/debug ~60-80%. See memory project-t1-mainnet-disk-recurring-fill.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

# NOTE: sccache is intentionally NOT used here. The release/musl profile sets
# lto="fat" + codegen-units=1 below — fat-LTO defeats per-crate object caching
# and the expensive work moves to the final link/LTO stage sccache never touches;
# dev builds use incremental, also uncacheable. The shared worktree target-dir
# (.claude/worktrees/.cargo/config.toml) is the correct caching primitive here.
# (Workflow audit 2026-05-31 verified near-zero would-be cache hits.)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"            # SPEC §17 panic policy

[profile.release-musl]
inherits = "release"
