[package]
name = "titan-zk-vault"
version = "2.0.0"
description = "Titan ZK-Vault — On-Chain Memory Anchor for Sovereign AI Agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "titan_zk_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
light-sdk = { version = "0.23.0", features = ["anchor"] }
light-hasher = "5.0.0"
