[package]
name = "titan-cgn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CGN slot lifecycle for Titan microkernel v2 Phase C — kernel creates ONLY cgn_live_weights.bin per SPEC §18.2"

[dependencies]
titan-core = { path = "../titan-core" }
titan-state = { path = "../titan-state" }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
