[package]
name = "titan-fastbus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Lock-free SPSC shm ring for kernel ↔ trinity-substrate IPC. Sub-100µs latency."

[dependencies]
titan-core = { path = "../titan-core" }
memmap2.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
