[package]
name = "titan-inner-body-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Inner-body trinity daemon — 7.83 Hz Schumann tick, reads sensor_cache + topology_lower, applies filter_down + ground_up, writes inner_body_5d.bin, publishes BODY_STATE (src=inner). C-S5 §10.5 chunk C5-2 + SPEC §9.A."

[[bin]]
name = "titan-inner-body-rs"
path = "src/main.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-state = { path = "../titan-state" }
titan-bus = { path = "../titan-bus" }
titan-schumann = { path = "../titan-schumann" }
titan-trinity-daemon = { path = "../titan-trinity-daemon" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
nix.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
rmpv.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
