[package]
name = "titan-inner-mind-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Inner-mind trinity daemon — 23.49 Hz Schumann tick (×3 body), reads sensor_cache + topology_lower, applies filter_down to mind[0:15], applies ground_up to mind[10:15] WILLING ONLY (G10), writes inner_mind_15d.bin, publishes MIND_STATE (src=inner). C-S5 §10.5 chunk C5-3 + SPEC §9.A."

[[bin]]
name = "titan-inner-mind-rs"
path = "src/main.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-state = { path = "../titan-state" }
titan-bus = { path = "../titan-bus" }
titan-schumann = { path = "../titan-schumann" }
titan-trinity-daemon = { path = "../titan-trinity-daemon" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
nix.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
rmpv.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
