[package]
name = "titan-kernel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "titan-kernel-rs — Rust L0 microkernel binary for Titan microkernel v2 Phase C"

[[bin]]
name = "titan-kernel-rs"
path = "src/main.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-bus = { path = "../titan-bus" }
titan-state = { path = "../titan-state" }
titan-cgn = { path = "../titan-cgn" }
titan-clocks = { path = "../titan-clocks" }
titan-fastbus = { path = "../titan-fastbus" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "signal", "sync", "fs", "io-util", "macros", "process"] }

# CLI parsing per SPEC §13
clap = { workspace = true, features = ["derive", "env"] }

# Structured-JSON logging per SPEC §16
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true

# Sync primitives for kernel state
parking_lot.workspace = true

# Unix syscalls (prctl)
nix = { workspace = true, features = ["signal"] }

# SPEC §11.B.5 socket activation — bind the api listening socket
# (SO_REUSEADDR) the kernel hands to api children; libc::dup2 in the child's
# pre-exec hook places it on the inherited fd (TITAN_API_LISTEN_FD).
socket2.workspace = true
libc.workspace = true
toml.workspace = true

# Hex encoding for authkey
hex.workspace = true

# No build-deps — build.rs shells out to `git` directly + gracefully
# degrades to "unknown" when git is missing (e.g. tarball builds).

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "time", "sync"] }
rand = { workspace = true }
ed25519-dalek = { workspace = true }

[lints]
workspace = true
