[package]
name = "titan-outer-body-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Outer-body trinity daemon — jittered ~10s ±20% tick, reads sensor_cache_outer_body (msgpack) + topology_outer_lower, applies filter_down + ground_up, writes outer_body_5d.bin, publishes BODY_STATE (src=outer). C-S6 §10.6 chunk C6-3 + SPEC §9.A + §18.1."

[[bin]]
name = "titan-outer-body-rs"
path = "src/main.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-state = { path = "../titan-state" }
titan-bus = { path = "../titan-bus" }
titan-trinity-daemon = { path = "../titan-trinity-daemon" }
titan-schumann = { path = "../titan-schumann" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
nix.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
rmpv.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
