[package]
name = "titan-outer-mind-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Outer-mind trinity daemon — jittered ~5s ±20% tick, reads sensor_cache_outer_mind (msgpack) + topology_outer_lower, applies filter_down + ground_up to willing[10:15] only (G10), writes outer_mind_15d.bin, publishes MIND_STATE (src=outer). C-S6 §10.6 chunk C6-4 + SPEC §9.A + §18.1."

[lib]
name = "titan_outer_mind_rs"
path = "src/lib.rs"

[[bin]]
name = "titan-outer-mind-rs"
path = "src/main.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-state = { path = "../titan-state" }
titan-bus = { path = "../titan-bus" }
titan-trinity-daemon = { path = "../titan-trinity-daemon" }
titan-schumann = { path = "../titan-schumann" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
nix.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
rmpv.workspace = true

[dev-dependencies]
tempfile = "3"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
